Fixed #8. Created a debug.keystore and setup an android module to use it.

--- a/CryptupAndroid/build.gradle
+++ b/CryptupAndroid/build.gradle
@@ -13,6 +13,15 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    signingConfigs {
+        debug {
+            storeFile file("debug.keystore")
+            storePassword "android"
+            keyAlias "flowcryptdebugkey"
+            keyPassword "android"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
