Added a SplashActivity with some logic.

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -63,15 +63,22 @@ dependencies {
     })
 
     compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
-    compile 'com.eclipsesource.j2v8:j2v8:4.6.0@aar'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'commons-io:commons-io:2.5'
+    compile "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
+    compile "com.google.android.gms:play-services-auth:${PLAY_SERVICES_VERSION}"
     compile 'com.google.code.gson:gson:2.7'
+
     compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
+
+    compile 'com.eclipsesource.j2v8:j2v8:4.6.0@aar'
+    compile 'commons-io:commons-io:2.5'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'ch.acra:acra:4.9.2'
 
     testCompile "junit:junit:${JUNIT_VERSION}"
+
 }
