--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.flowcrypt.email">
 
+    <!-- android.permission.INTERNET needed to make a network requests -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- android.permission.ACCESS_NETWORK_STATE used to check is internet connection available -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
@@ -12,14 +14,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".ui.activity.SendEmailActivity"
-            android:screenOrientation="portrait">
+            android:name=".ui.activity.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.activity.SendEmailActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
