--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,8 @@ JAVA_SOURCE_COMPATIBILITY=1.7
 REQUIRED_GRADLE_VERSION=2.14.1
 ANDROID_SUPPORT_VERSION=25.3.1
 ANDROID_GRADLE_VERSION=2.3.1
+PLAY_SERVICES_VERSION=10.2.1
+GOOGLE_SERVICES_VERSION=3.0.0
 RETROFIT_VERSION=2.2.0
 JUNIT_VERSION=4.12
 
