Prepared a template for displaying details of a message. Described only logic. No design.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -43,6 +43,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.flowcrypt.email.ui.activity.SplashActivity" />
         </activity>
+        <activity
+            android:name=".ui.activity.MessageDetailsActivity"
+            android:parentActivityName=".ui.activity.EmailManagerActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.flowcrypt.email.ui.activity.EmailManagerActivity" />
+        </activity>
     </application>
 
 </manifest>
