Added com.hootsuite.android:nachos:1.1.1 dependency. Created a PgpContactAdapter to use in the CustomNachoTextView. Added support to compose an email to more than one recipients.

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -90,4 +90,5 @@ dependencies {
     compile 'commons-io:commons-io:2.5'
     compile 'ch.acra:acra:4.9.2'
     compile 'org.jsoup:jsoup:1.10.2'
+    compile "com.hootsuite.android:nachos:1.1.1"
 }
