--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -65,6 +65,8 @@
             android:authorities="${applicationId}.SecurityContentProvider"
             android:enabled="true"
             android:exported="false" />
+
+        <service android:name=".service.EmailAndNameUpdaterService" />
     </application>
 
 </manifest>
