Added CreateOrImportKeyActivity. Added a logic of import private keys.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -67,6 +67,8 @@
             android:exported="false" />
 
         <service android:name=".service.EmailAndNameUpdaterService" />
+
+        <activity android:name=".ui.activity.CreateOrImportKeyActivity" />
     </application>
 
 </manifest>
