--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -61,14 +61,12 @@
         <activity
             android:name=".ui.activity.SecureComposeActivity"
             android:label="@string/title_activity_secure_compose"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.activity.SecureReplyActivity"
             android:label="@string/title_activity_security_reply"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.activity.CreateOrImportKeyActivity"
@@ -78,6 +76,17 @@
             android:name=".ui.activity.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.LegalActivity"
+            android:label="@string/legal"
+            android:parentActivityName=".ui.activity.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar.NoElevation">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.flowcrypt.email.ui.activity.SettingsActivity" />
+        </activity>
 
         <provider
             android:name=".database.provider.SecurityContentProvider"
