Added a temp realization of email sync. | #31.
Created EmailSyncService, GmailSynsManager and other.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -95,7 +95,13 @@
             android:exported="false" />
 
         <!-- Services -->
-        <service android:name=".service.EmailAndNameUpdaterService" />
+        <service
+            android:name=".service.EmailAndNameUpdaterService"
+            android:exported="false" />
+
+        <service
+            android:name=".service.EmailSyncService"
+            android:exported="false" />
     </application>
 
 </manifest>
