Fixed small bugs.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 
         <activity
             android:name=".ui.activity.EmailManagerActivity"
+            android:label="@string/loading"
             android:screenOrientation="portrait" />
 
         <activity
