--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -92,6 +92,8 @@
             android:label="@string/help_feedback_or_question"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".ui.activity.DevSettingsActivity" />
+
         <!-- Providers -->
         <provider
             android:name=".database.provider.SecurityContentProvider"
