--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ ANDROID_GRADLE_VERSION=2.3.3
 PLAY_SERVICES_VERSION=10.2.6
 GOOGLE_SERVICES_VERSION=3.0.0
 RETROFIT_VERSION=2.2.0
+LEAKCANARY_VERSION=1.5.1
 JUNIT_VERSION=4.12
 JAVA_MAIL_VERSION=1.5.6
 
