--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
+# Business Source License 1.0 ï¿½ 2017 FlowCrypt Limited (tom@cryptup.org).
 # Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
 # Contributors: DenBond7
 #
@@ -17,7 +17,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 APP_VERSION_CODE=1
-APP_VERSION_NAME=1.0.0
+APP_VERSION_NAME=0.0.1
 BUILD_TOOLS_VERSION=25.0.3
 COMPILE_SDK_VERSION=25
 TARGET_SDK_VERSION=25
