Added a template for signing release builds. | #51.

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -36,6 +36,13 @@ android {
     }
 
     signingConfigs {
+        release {
+            storeFile file("modified this..")
+            storePassword ""
+            keyAlias ""
+            keyPassword ""
+        }
+
         debug {
             storeFile file("debug.keystore")
             storePassword "android"
