--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -55,7 +55,7 @@ android {
             signingConfig signingConfigs.release
             shrinkResources true
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles 'proguard-rules.pro'
             resValue 'string', 'application_id', android.defaultConfig.applicationId
         }
 
