--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -131,6 +131,9 @@ dependencies {
         exclude group: 'com.sun.mail'
     }
 
+    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
+
     compile 'com.eclipsesource.j2v8:j2v8:4.6.0@aar'
     compile 'commons-io:commons-io:2.5'
     compile 'ch.acra:acra:4.9.2'
