Added an onClick function for top button on the main screen. | #54.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -92,6 +92,11 @@
             android:label="@string/help_feedback_or_question"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.HtmlViewFromAssetsRawActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".ui.activity.DevSettingsActivity" />
 
         <!-- Providers -->
