--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".ui.activity.RestoreAccountActivity"
+            android:name=".ui.activity.LoadPrivateKeysBackupFromGmailActivity"
             android:screenOrientation="portrait" />
 
         <activity
