Added import a private key from clipboard in auto mode. | Close #56.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -118,6 +118,10 @@
         <service
             android:name=".service.EmailSyncService"
             android:exported="false" />
+
+        <service
+            android:name=".service.CheckClipboardToFindPrivateKeyService"
+            android:exported="false" />
     </application>
 
 </manifest>
