--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.activity.ImportPublicKeyActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.activity.CheckKeysActivity"
             android:screenOrientation="portrait" />
 
