--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
