Added use the right variant of strings when compose different messages.. | Close #72

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
 
         <activity
             android:name=".ui.activity.SecureComposeActivity"
-            android:label="@string/secure_compose"
+            android:label="@string/compose"
             android:screenOrientation="portrait" />
 
         <activity
