Added a simple realization of AttachmentDownloadManagerService. | #82.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -126,6 +126,10 @@
         <service
             android:name=".service.CheckClipboardToFindPrivateKeyService"
             android:exported="false" />
+
+        <service
+            android:name=".service.attachment.AttachmentDownloadManagerService"
+            android:exported="false" />
     </application>
 
 </manifest>
