Added an UI template for adding a new account. | #75.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -101,6 +101,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.AddNewAccountActivity"
+            android:label="@string/adding_new_account"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".ui.activity.DevSettingsActivity" />
 
         <!-- Providers -->
