--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,8 @@ ANDROID_SUPPORT_VERSION=25.3.1
 ANDROID_GRADLE_VERSION=2.3.3
 PLAY_SERVICES_VERSION=11.0.4
 GOOGLE_SERVICES_VERSION=3.0.0
-RETROFIT_VERSION=2.2.0
+RETROFIT_VERSION=2.3.0
+OKHTTP_VERSION=3.9.0
 LEAKCANARY_VERSION=1.5.4
 JUNIT_VERSION=4.12
 JAVA_MAIL_VERSION=1.5.6
