--- a/gradle.properties
+++ b/gradle.properties
@@ -32,5 +32,5 @@ OKHTTP_VERSION=3.9.0
 LEAKCANARY_VERSION=1.5.4
 JUNIT_VERSION=4.12
 JAVA_MAIL_VERSION=1.6.0
-GLIDE_VERSION=4.0.0-RC1
+GLIDE_VERSION=4.1.1
 
