Added "Settings page: Experimental" | Close #111.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -97,6 +97,11 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.activity.settings.ExperimentalSettingsActivity"
+            android:label="@string/experimental_settings"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.activity.HtmlViewFromAssetsRawActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
