--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -106,6 +106,11 @@
             android:label="@string/adding_new_account"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.AddNewAccountActivity"
+            android:label="@string/adding_new_account"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".ui.activity.DevSettingsActivity" />
 
         <!-- Providers -->
