--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -32,6 +32,7 @@ android {
         versionCode APP_VERSION_CODE as int
         versionName APP_VERSION_NAME as String
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -118,10 +119,19 @@ dependencies {
     compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:multidex:1.0.1'
 
     compile "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
     compile "com.google.android.gms:play-services-auth:${PLAY_SERVICES_VERSION}"
     compile 'com.google.code.gson:gson:2.8.2'
+    compile('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.code.findbugs'
+    }
+    compile('com.google.apis:google-api-services-gmail:v1-rev72-1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.google.code.findbugs'
+    }
 
     compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
