--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -99,55 +99,55 @@ android {
 }
 
 dependencies {
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAKCANARY_VERSION}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${LEAKCANARY_VERSION}"
 
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
-    testCompile "junit:junit:${JUNIT_VERSION}"
+    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
+    testImplementation "junit:junit:${JUNIT_VERSION}"
 
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:multidex:1.0.1'
+    implementation "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
+    implementation "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:multidex:1.0.1'
 
-    compile "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
-    compile "com.google.android.gms:play-services-auth:${PLAY_SERVICES_VERSION}"
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile('com.google.api-client:google-api-client-android:1.23.0') {
+    implementation "com.google.android.gms:play-services-base:${PLAY_SERVICES_VERSION}"
+    implementation "com.google.android.gms:play-services-auth:${PLAY_SERVICES_VERSION}"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
         exclude group: 'com.google.code.findbugs'
     }
-    compile('com.google.apis:google-api-services-gmail:v1-rev72-1.23.0') {
+    implementation('com.google.apis:google-api-services-gmail:v1-rev72-1.23.0') {
         exclude group: 'org.apache.httpcomponents'
         exclude group: 'com.google.code.findbugs'
     }
 
-    compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
-    compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
-    compile "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
+    implementation "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
+    implementation "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
 
-    compile "com.sun.mail:android-mail:${JAVA_MAIL_VERSION}"
-    compile "com.sun.mail:android-activation:${JAVA_MAIL_VERSION}"
-    compile("com.sun.mail:gimap:${JAVA_MAIL_VERSION}") {
+    implementation "com.sun.mail:android-mail:${JAVA_MAIL_VERSION}"
+    implementation "com.sun.mail:android-activation:${JAVA_MAIL_VERSION}"
+    implementation("com.sun.mail:gimap:${JAVA_MAIL_VERSION}") {
         exclude group: 'com.sun.mail'
     }
 
-    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
     annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
 
-    compile 'com.eclipsesource.j2v8:j2v8:4.8.0@aar'
-    compile 'commons-io:commons-io:2.5'
-    compile 'ch.acra:acra:4.9.2'
-    compile 'com.hootsuite.android:nachos:1.1.1'
+    implementation 'com.eclipsesource.j2v8:j2v8:4.8.0@aar'
+    implementation 'commons-io:commons-io:2.5'
+    implementation 'ch.acra:acra:4.9.2'
+    implementation 'com.hootsuite.android:nachos:1.1.1'
 }
