Renamed Backup -> Backups. Added a caption in Settings -> Backups.| Close #132.

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -88,7 +88,7 @@
 
         <activity
             android:name=".ui.activity.settings.BackupSettingsActivity"
-            android:label="@string/backup"
+            android:label="@string/backups"
             android:screenOrientation="portrait" />
 
         <activity
