--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -87,6 +87,11 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.activity.settings.AttesterSettingsActivity"
+            android:label="@string/attester"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.activity.settings.BackupSettingsActivity"
             android:label="@string/backups"
             android:screenOrientation="portrait" />
