--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -121,7 +121,13 @@
             android:label="@string/adding_new_account"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".ui.activity.DevSettingsActivity" />
+        <activity
+            android:name=".ui.activity.DevSettingsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.SelectContactsActivity"
+            android:screenOrientation="portrait" />
 
         <!-- Providers -->
         <provider
