Added a simple test of the standard login. Refactored code. | #179

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -104,7 +104,8 @@ dependencies {
 
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
 
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${ESPRESSO_VERSION}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:${ESPRESSO_VERSION}"
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAKCANARY_VERSION}"
