--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ JAVA_SOURCE_COMPATIBILITY=1.7
 ANDROID_SUPPORT_VERSION=27.0.2
 ANDROID_GRADLE_VERSION=3.0.1
 PLAY_SERVICES_VERSION=11.8.0
+ESPRESSO_VERSION=3.0.1
 RETROFIT_VERSION=2.3.0
 OKHTTP_VERSION=3.9.1
 LEAKCANARY_VERSION=1.5.4
