--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -151,4 +151,6 @@ dependencies {
     implementation 'commons-io:commons-io:2.5'
     implementation 'ch.acra:acra:4.9.2'
     implementation 'com.hootsuite.android:nachos:1.1.1'
+    implementation 'com.nulab-inc:zxcvbn:1.2.3'
+
 }
